src/objects/Public_Assessment__c.object
<CustomObject>
    <description>Used to support the collection of information necessary to perform data collections that primarily occur outside of Salesforce.</description>
    <fields>
        <fullName>Assessable_Object_API__c</fullName>
        <inlineHelpText>This is the Salesforce API name of the Assessable Object.</inlineHelpText>
        <label>Assessable Object API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessible_Object_ID__c</fullName>
        <inlineHelpText>This is the Salesforce record ID of the Assessable Object.</inlineHelpText>
        <label>Assessable Object ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Template_Description__c</fullName>
        <formula>IF((ISBLANK(Assessment_Template__c)), 
(IF(ISBLANK(Assignment_Manager__c),&apos;&apos;, Assignment_Manager__r.InvestigationType__r.Description__c)), 
Assessment_Template__r.Description__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the description of the Assessment Template.</inlineHelpText>
        <label>Assessment Template Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Template_Name__c</fullName>
        <formula>IF((ISBLANK(Assessment_Template__c)), 
(IF(ISBLANK(Assignment_Manager__c),&apos;&apos;, Assignment_Manager__r.InvestigationType__r.Template_name__c)), 
Assessment_Template__r.Template_name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessment Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assessment_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Assessment Template ID that is being used for the Assessment.</inlineHelpText>
        <label>Assessment Template</label>
        <referenceTo>Main_questionaire__c</referenceTo>
        <relationshipLabel>Public Assessments</relationshipLabel>
        <relationshipName>Public_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Generator_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this Public Assessment was generated as part of a batch this is the Salesforce record Id of that batch.</inlineHelpText>
        <label>Assignment Generator Batch</label>
        <referenceTo>Assignment_Generator_Batch__c</referenceTo>
        <relationshipLabel>Public Assessments</relationshipLabel>
        <relationshipName>Public_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignment_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Assignment Manager record associated with the Public Assessment.</inlineHelpText>
        <label>Assignment Manager</label>
        <referenceTo>IssueRequest_Life_Cycle__c</referenceTo>
        <relationshipLabel>Public Assessments</relationshipLabel>
        <relationshipName>Public_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distribution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution</label>
        <referenceTo>Distribution__c</referenceTo>
        <relationshipLabel>Public Assessments</relationshipLabel>
        <relationshipName>Public_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>Assessment submissions will not be accepted via this link after this date. The user will receive an error message letting them no the link has expired.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Public Assessments</relationshipLabel>
        <relationshipName>Public_Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_Assessment_Link__c</fullName>
        <formula>IF(ISBLANK(Assignment_Manager__c), 
HYPERLINK($Setup.Public_Assessment_Configuration__c.Site_URL__c + &apos;/ExAM__AMAndAnswerCreationPage?paId=&apos;+ Id +&apos;&amp;objId=&apos; + Assessible_Object_ID__c + &apos;&amp;tempId=&apos; + Assessment_Template__r.Id,IF(ISBLANK(Text_For_URL__c),&apos;Link&apos;,Text_For_URL__c),&apos;_self&apos;), 
HYPERLINK($Setup.Public_Assessment_Configuration__c.Site_URL__c + &apos;/ExAM__AMAndAnswerCreationPage?paId=&apos;+ Id +&apos;&amp;amId=&apos; + Assignment_Manager__c,IF(ISBLANK(Text_For_URL__c),&apos;Link&apos;,Text_For_URL__c),&apos;_self&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a link to the Public Assessment. This is particularly useful for reports where you would like to be able to link directly to the Public 
Assessment from a particular column.</inlineHelpText>
        <label>Public Assessment Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Assessment_URL__c</fullName>
        <formula>$Setup.Public_Assessment_Configuration__c.Site_URL__c + &apos;/ExAM__AMAndAnswerCreationPage?paId=&apos;+ Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the full URL that can be used to access this Public Assessment.</inlineHelpText>
        <label>Public Assessment URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Code__c</fullName>
        <inlineHelpText>If you are using our Twillio integration to support SMS interactions over Public Assessments this code is what your end user will text in order to fire start engaging with this template.</inlineHelpText>
        <label>Short Code</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Text_For_URL__c</fullName>
        <inlineHelpText>This is the text that should be used in the Public Assessment link.</inlineHelpText>
        <label>Text For URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Public Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Public_Assessment_URL__c</columns>
        <columns>Assessment_Template__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assessment_Template__c</field>
            <operation>notEqual</operation>
            <value>*********</value>
        </filters>
        <filters>
            <field>Assignment_Manager__c</field>
            <operation>notEqual</operation>
            <value>***********</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PA-{0000}</displayFormat>
        <label>Public Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Public Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>